objects/Case_Survey_Applications__c.object
<CustomObject>
    <label>Case Survey Applications</label>
    <nameField>
        <displayFormat>CSAP-{0000}</displayFormat>
        <label>Case Survey Applications Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Survey Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Case_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Survey</label>
        <referenceTo>INF_Case_Survey__c</referenceTo>
        <relationshipLabel>Case Survey Applications</relationshipLabel>
        <relationshipName>Case_Survey_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Product_Group__c</fullName>
        <label>Application Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>